# Simy

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: core-relay-tests.yml  mobile-ratchet-tests.yml
artifacts/: smoke.json
artifacts/readiness/: frontend-smoke.json  live-feature-check.json  managed-user-flow-check.json  presentation-one-pager.md  production-readiness-snapshot.json  production-readiness-snapshot.md
clients/: README.md
clients/android/: README.md  build.gradle.kts  settings.gradle.kts
clients/android/simy-security/: build.gradle.kts
clients/android/src/androidTest/kotlin/com/simy/security/ratchet/: AndroidEncryptedRatchetStoreInstrumentedTest.kt
clients/android/src/main/: AndroidManifest.xml
clients/android/src/main/kotlin/com/simy/security/ratchet/: RatchetSessionStorage.kt
clients/desktop/: README.md
clients/desktop/simy-desktop/: package-lock.json  package.json  tailwind.config.js
clients/desktop/simy-desktop/src/: App.tsx  RatchetTest.tsx  ratchet-api.ts
clients/desktop/simy-desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/desktop/simy-desktop/src-tauri/src/: lib.rs  main.rs  ratchet.rs
clients/ios/: Package.swift  README.md
clients/ios/Sources/SimySecurity/Ratchet/: RatchetSessionStorage.swift
clients/ios/Tests/SimySecurityTests/: RatchetSessionStorageTests.swift
crates/comm-core/: Cargo.toml
crates/comm-core/examples/: bootstrap_double_ratchet.rs  bootstrap_initial_message.rs  encrypted_ratchet_store.rs  generate_identity_fixture.rs  generate_prekey_bundle.rs
crates/comm-core/src/: device.rs  double_ratchet.rs  lib.rs  ratchet_store_fs.rs  x3dh.rs
docs/: architecture.md  data-retention.md  deployment.md  frontend-showcase-urls.md  key-management.md  live-testing.md  media-and-posts.md  mobile-ratchet-validation.md  next-build-plan.md  production-readiness-brief.md  production-readiness.md  push-notifications.md  relay-api.md  security-test-plan.md  testing-quickstart.md  testing-runbook.md  threat-model.md
scripts/: frontend_smoke.ps1  generate_presentation_brief.ps1  live_feature_check.ps1  load_env.ps1  managed_user_flow_check.ps1  preflight.ps1  production_gate.ps1  production_readiness_snapshot.ps1  relay_smoke.ps1  run_relay.ps1  start_all.ps1  test_all.ps1
services/relay/: Cargo.toml  README.md
services/relay/migrations/: 0001_init.sql  0002_media_upload_intents.sql  0003_media_manifests_and_access_grants.sql  0004_prekey_bundles.sql  0005_device_records.sql  0006_accounts.sql  0007_relationships.sql  0008_feed_posts.sql  0009_feed_replies.sql
services/relay/src/: main.rs
services/relay/static/: index.html
