[package]
name = "comm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
ratchet-store-fs = []

[dependencies]
base64ct.workspace = true
chacha20poly1305.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
hkdf.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
x25519-dalek.workspace = true
zeroize.workspace = true
