[package]
name = "relay"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
base64ct.workspace = true
chrono.workspace = true
comm-core = { path = "../../crates/comm-core" }
ed25519-dalek.workspace = true
hex.workspace = true
rand_core.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
x25519-dalek.workspace = true
